style.css
@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
@import url("https://fonts.googleapis.com/icon?family=Material+Icons");

:root,
[data-theme="dark"] {
  /* https://www.schemecolor.com/halloween-gradient.php */
  --halloween-1: #eb6122;
  --halloween-2: #c9532c;
  --halloween-3: #a84535;
  --halloween-4: #86383f;
  --halloween-5: #652a48;
  --halloween-6: #431c52;

  --halloween-bg-1: #380a45;
  --halloween-bg-2: #4d0b2d;

  --halloween-bg-darker-1: #593124;
  --halloween-bg-darker-2: #421c2f;

  --halloween-bg-darker-1-triplet: 89, 49, 36;
  --halloween-bg-darker-2-triplet: 66, 28, 47;

  --color: #f2f2f2;
  --h1-color: #ffffff;
  --h2-color: var(--h1-color);
  --h3-color: var(--h1-color);
  --h4-color: var(--h1-color);
  --h5-color: var(--h1-color);
  --h6-color: var(--h1-color);
  --muted-color: #bfbfbf;
  --background-color: #421c2f;
  --primary: var(--halloween-1);
  --primary-hover: var(--halloween-2);
  --secondary: var(--halloween-6);
  --secondary-hover: var(--halloween-5);

  --font-family: "Lato", sans-serif;
}

:where(:root) {
  background: none !important;
}

body {
  --font-size: 1em;
  position: relative;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  --font-family: "Poppins", sans-serif;
}

h1 {
  font-size: 3.5em;
}

h2 {
  font-size: 2.5em;
}

h3 {
  font-size: 2em;
}

ul,
ol,
li {
  list-style: none;
  padding: 0;
}

li {
  margin-bottom: 1em;
}

li::before {
  content: "";
}

li strong {
  line-height: 2;
  font-size: 1.1em;
}

footer {
  padding: 1em 0;
  border-top: 1.5px solid rgba(255, 255, 255, 0.15);

  font-size: 0.8em;

  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

@media (max-width: 576px) {
  footer {
    flex-direction: column;
    align-items: center;
  }
}

#floating-background {
  z-index: -2;

  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;

  width: 100vw;
  height: 100vh;

  background-color: var(--background-color);
  background-image: linear-gradient(
    to bottom,
    var(--halloween-bg-1) 0%,
    var(--halloween-bg-2) 100%
  );
}

.inline-icon,
.inline-emoji {
  display: inline-block;
  width: 1.2em;
  height: 1.2em;
  margin: 0 0.05em 0 0.1em;
  vertical-align: -0.25em;
}

.inline-icon {
  filter: invert(1);
}

/*
 * Parallax effect
 * https://keithclark.co.uk/articles/pure-css-parallax-websites/
 */

.perspective {
  height: 100vh;
  height: calc(var(--vh, 1vh) * 100);

  scroll-behavior: smooth;
}

.perspective:not(.apple-sucks) {
  --perspective: 1;
  perspective: calc(var(--perspective) * 1px);
  perspective-origin: 0 0;

  overflow-x: hidden;
  overflow-y: auto;
}

#bg-top {
  --z-translate: -16;

  z-index: -1;
  opacity: 0.5;

  position: absolute;
  top: 0;
  right: 0;
  width: 60%;

  transform: translateX(1000%) translateZ(calc(var(--z-translate) * 1px))
    scale(calc((var(--perspective) - var(--z-translate)) / var(--perspective)));
  transform-origin: 0 0;

  pointer-events: none;
}

#bg-bottom {
  --z-translate: -1;

  z-index: -1;
  opacity: 0.75;

  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: inherit;

  transform: translateZ(calc(var(--z-translate) * 1px))
    scale(calc((var(--perspective) - var(--z-translate)) / var(--perspective)));
  transform-origin: 0 0;

  overflow: clip;
  pointer-events: none;
}

#bg-bottom img {
  width: 100%;
  height: 100%;

  object-fit: cover;
  object-position: left;
}

#bg-bottom div {
  background-color: black;
  margin-top: -2px; /* fix SVG artifact */
  height: 9999px;
}

@media (min-width: 1200px) {
  .container {
    max-width: 860px;
  }
}

@media (min-width: 992px) {
  .container {
    max-width: 860px;
  }
}

span.halloween {
  color: var(--halloween-1);
}

#header > * {
  margin: 0;
}

.whole-page {
  --percentage: 100;
  min-height: calc(var(--percentage) * 1%);

  display: flex;
  flex-direction: column;
  justify-content: center;
}

section h2 {
  margin-top: calc(var(--typography-spacing-vertical) * 1.5);
  margin-bottom: calc(var(--typography-spacing-vertical) * 0.5);
}

section.qrcode-promo {
  display: flex;
  flex-direction: column;
  gap: var(--spacing);

  align-items: center;
  text-align: center;

  width: min(100%, 600px);
}

section.qrcode-promo > h2 {
  margin: 0;
  line-height: 1; /* keeps spacing consistent */
}

section.qrcode-promo > p.links {
  font-size: 1.2em;
}

section.qrcode-promo > p.links .material-icons {
  font-size: 1.35em;
  vertical-align: sub;
}

section.qrcode-promo > *:not(:first-child) {
  margin: 0;
}

#about {
  position: relative;
  margin-top: 0;
  margin-bottom: 0;
}

#about h1 {
  font-size: clamp(2rem, 10vw, 6rem);
}

#about header,
#about .intro p {
  margin-bottom: 2em;
}

#about .intro {
  font-size: 1.1em;
}

#about .intro p {
  padding: 0 calc(var(--spacing) / 2);
}

#about table {
  width: max-content;
  box-shadow: 0 0 32px -12px rgba(0, 0, 0, 0.35);
}

#about table td {
  padding: calc(var(--spacing) / 2) calc(var(--spacing) / 1.5);
  border-bottom: 0;
  backdrop-filter: blur(6px);
}

#about table td:nth-child(1) {
  width: 6ch;
  font-weight: 600;
  background-color: rgba(var(--halloween-bg-darker-1-triplet), 0.85);
}

#about table td:nth-child(2) {
  background-color: rgba(var(--halloween-bg-darker-2-triplet), 0.85);
}

#about + div {
  box-shadow: 0 0 52px -12px rgba(0, 0, 0, 0.5) inset;

  background-color: var(--background-color);
  background-image: linear-gradient(
    to bottom,
    var(--halloween-bg-darker-1) 0%,
    var(--halloween-bg-darker-2) 100%
  );

  display: flex;
  flex-direction: column;

  gap: calc(var(--block-spacing-vertical) * 2);
}

#about + div > *:first-child {
  /* Allow anchor links to properly snap to this section */
  padding-top: calc(var(--block-spacing-vertical) * 2);
}

#about + div > section {
  margin-top: 0;
  margin-bottom: 0;
}

#about + div > section h2 {
  text-align: center;
}

#move-down {
  filter: invert(1);

  position: absolute;
  bottom: 0;
  left: 0;

  width: 100%;
  height: 5em;

  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

#scoring {
  --color-1: #e78284;
  --color-2: #ef9f76;
  --color-3: #a6d189;
  --color-4: #f4b8e4;
  --color-5: #99d1db;
}

#scoring li:nth-child(1) strong,
#scoring li:nth-child(1) span.tip {
  color: var(--color-1);
}

#scoring li:nth-child(2) strong,
#scoring li:nth-child(2) span.tip {
  color: var(--color-2);
}

#scoring li:nth-child(3) strong,
#scoring li:nth-child(3) span.tip {
  color: var(--color-3);
}

#scoring li:nth-child(4) strong,
#scoring li:nth-child(4) span.tip {
  color: var(--color-4);
}

#scoring li:nth-child(5) strong,
#scoring li:nth-child(5) span.tip {
  color: var(--color-5);
}

#scoring li span.tip {
  filter: contrast(0.35) brightness(1.35);
  font-size: 0.9em;
  margin-top: calc(var(--spacing) / 4);

  display: flex;
}

#scoring ul li {
  display: flex;
  flex-direction: column;
}

#scoring .tip::before {
  content: "💡";
  margin: 0 calc(var(--spacing) / 4);
}

#prizes {
  --1st-place: #f0c674;
  --2nd-place: #c5c8c6;
  --3rd-place: #de935f;
}

#prizes ol li:nth-child(1) strong {
  color: var(--1st-place);
}

#prizes ol li:nth-child(2) strong {
  color: var(--2nd-place);
}

#prizes ol li:nth-child(3) strong {
  color: var(--3rd-place);
}

#prizes ol li {
  display: flex;
  flex-direction: column;
}

#prizes ol li ul {
  margin-top: 0;
}

#prizes ol li ul,
#prizes ol li ul li {
  padding-left: calc(var(--spacing));
  margin-bottom: calc(var(--spacing) / 4);
}

#prizes ol li ul li {
  display: flex;
  flex-direction: row;
}

#prizes ol li ul li::before {
  content: "•";
  margin-right: calc(var(--spacing) / 2);
}

#faq h2 {
  margin-bottom: var(--spacing);
}

#contact p {
  font-size: 1.1em;
}

